2009-05-22  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski, diff63,diff65)
	* include/gc_pthread_redirects.h:
		- dlfcn.h is included for dlopen() proto before undefining
		"dlopen" (so, it's possible now to include dlfcn.h after
		gc.h from user code);
		- GC_dlopen() proto is added (except for Darwin as
		it's missing there);
		- "dlopen" is explicitly undefined (before its redefinition).
	* include/gc.h:
		- "process.h" is included besides "windows.h"
		(for _beginthreadex/_endthreadex); win32 only.
		- GC_NO_THREAD_DECLS is moved to the right place
		(before closing "extern C").
	* pthread_support.c: Fix out of memory handling for Thread_Reps.
	* win32_threads.c: Don't include process.h on winCE,
	improve out of memory handling for thread structures, dont
	define GC_beginthreadex and GC_endthreadex for winCE.

2009-05-22  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski, diff71)
	* tests/test.c: Change gcj vtable decriptor type from size_t to
	GC_word.

2009-05-22  Hans Boehm <Hans.Boehm@hp.com>
	* gcj_mlc.c: Add comment.
	* tests/test.c: Change NTEST to NTHREADS.  Fork 5 threads by default.
	Run reverse_test a second time in each thread.Add comments.
	Dont rely on AO_fetch_and_add.

2009-05-22  Hans Boehm <Hans.Boehm@hp.com> (Largely from Ludovic Cortes)
	* dyn_load.c (GC_register_dynlib_callback,
	GC_register_dynamic_libraries_dl_iterate_phdr): Add support
	for GNU_PT_RELRO relocations.

2009-05-22  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski, diff61)
	* Makefile, Makefile.direct: GC_SOLAIS_PTHREADS was replaced
	by GC_SOLARIS_THREADS.
	* include/gc.h: Improve finalizer documentation.
	* mips_sgi_mach_dep.s: Replace _MIPS_SIM_ABI32 with _ABIO32.
	* pthread_stop_world.c, Makefile.dj: Fix typos.

2009-05-21  Hans Boehm <Hans.Boehm@hp.com> 
	* win32_threads.c (GC_new_thread): Make first_thread
	visible to the whole file.
	(UNPROTECT): New macro.
	(GC_push_stack_for, GC_suspend, GC_start_world): unprotect
	thread structures before writing.